# alfredApp

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  docker-compose.yml  manage.py  pyproject.toml
addresses/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
addresses/management/: __init__.py
addresses/management/commands/: __init__.py  populate_fake_data.py
addresses/migrations/: 0001_initial.py
alfred/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
alfredapp/: apps.py
drivers/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
drivers/migrations/: 0001_initial.py
services/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
services/migrations/: 0001_initial.py
